tests/data/bad/bad_inherit_subclass_class_changes.py
from __future__ import annotations

from pycs import CN
from tests.data.bad.bad_inherit_subclass import cfg

cfg = CN(cfg)
